Update environment variables for application key and mail credentials

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Scorpio Hub"
 APP_ENV=production
-APP_KEY=
+APP_KEY=base64:Gizdw6iId5EPukbdJODaZ+kXbc4O6d6VnT3uin1sH0o=
 APP_DEBUG=false
 APP_URL=
 
@@ -51,8 +51,8 @@ MAIL_MAILER=smtp
 MAIL_SCHEME=null
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_USERNAME=280116122670e4
+MAIL_PASSWORD=3c5b8f07cf2a97
 MAIL_FROM_ADDRESS="info@scorpiohub.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
